some changes in componentes and logics #454

--- a/staff/tano-aleu/project/app/src/index.css
+++ b/staff/tano-aleu/project/app/src/index.css
@@ -159,6 +159,13 @@ input[type="range"]::-ms-track {
 }
 
 
+@layer components {
+  .toggle-checkbox:focus {
+    box-shadow: none !important;
+    border-color: transparent !important;
+  }
+}
+
 
 
   
