--- a/staff/tano-aleu/project/app/src/index.css
+++ b/staff/tano-aleu/project/app/src/index.css
@@ -41,12 +41,38 @@
   }
 
   .container {
-    @apply flex flex-col items-center gap-[1rem] p-[1rem];
+    @apply flex flex-col items-center ;
   }
 
   .container--horizontal {
-    @apply bg-purple-400 flex-row justify-center;
+    @apply bg-purple-300 flex items-center justify-center fixed inset-x-0 top-0 mx-auto rounded-tl-3xl rounded-tr-3xl;
+  max-width: 100%; /* Asegura que no se extienda más allá del ancho de la pantalla */
+}
+
+/* Adaptaciones de anchura basadas en los breakpoints, similares al footer */
+@media (min-width: 450px) { /* sm */
+  .container--horizontal {
+    @apply w-[450px];
   }
+}
+
+@media (min-width: 768px) { /* md */
+  .container--horizontal {
+    @apply w-[510px];
+  }
+}
+
+@media (min-width: 1024px) { /* lg */
+  .container--horizontal {
+    @apply w-[575px];
+  }
+}
+
+@media (min-width: 1280px) { /* xl */
+  .container--horizontal {
+    @apply w-[670px];
+  }
+}
 
 
 
@@ -86,6 +112,10 @@
 
 
   /* custom */
+
+  .feedback__button {
+    @apply border-[2px] border-solid border-black font-bold text-sm  text-white rounded-3xl p-2 mr-3 ml-3 mb-2 mt-2;
+  }
 
   .footer {
     @apply bg-purple-300 flex items-center justify-center fixed inset-x-0 bottom-0 mx-auto rounded-bl-3xl rounded-br-3xl;
@@ -172,7 +202,7 @@ input[type="range"]::-ms-track {
   /* Feedback */
 
   .Feedback {
-    @apply fixed top-0 w-full box-border;
+    @apply fixed top-0 box-border;
   }
 
   .Feedback--debug {
