repare some bugs, some news styles and logics #454

--- a/staff/tano-aleu/project/app/src/index.css
+++ b/staff/tano-aleu/project/app/src/index.css
@@ -229,9 +229,21 @@ body {
 }
 
 
+@keyframes logo-spin {
 
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 
+}
 
+.logo {
+  animation: logo-spin 5s linear infinite;
+  /* Ajusta el tiempo de animación (2s) según necesites */
+}
 
 
 
