--- a/staff/belen-ivars/project/app/src/index.css
+++ b/staff/belen-ivars/project/app/src/index.css
@@ -56,6 +56,7 @@ font-family: 'Ubuntu', sans serif;
 font-family: 'Ubuntu', sans serif;
 }
 
+
 /* Estils dels botons */
 
 .button {
@@ -118,11 +119,15 @@ font-family: 'Ubuntu', sans serif;
 }
 
 .new-form {
+  @apply inline-block inset-0 p-[none] border-black border-[1px] bg-white z-10 h-screen top-2 ;
+}
+
+.new-form-footer {
   @apply p-[none] border-black border-[1px] bg-white;
 }
 
 .profile-menu {
-  @apply  -inset-2 rounded-b-[2rem] align-middle bg-yellow-300/50 pt-20 pl-4 pr-4 relative inline-block pb-4 h-full;
+  @apply   rounded-b-[2rem] align-middle bg-yellow-300/50 pt-20 pl-4 pr-4 relative inline-block pb-4 h-full;
 
 }
 
@@ -149,7 +154,7 @@ font-family: 'Ubuntu', sans serif;
 }
 
 .container-recipes {
-  @apply pb-20 pt-10
+  @apply pb-20 pt-10 place-content-center
 }
 
 .container-info-recipe {
@@ -168,11 +173,15 @@ font-family: 'Ubuntu', sans serif;
   @apply flex flex-col items-center ;
 }
 
+.container-search-no-result {
+  @apply  items-center align-middle content-center;
+}
+
 /* Estils dels blocs de receptes*/
 
 
 .recipe {
-  @apply flex flex-col items-center m-[1rem] border-black rounded-3xl border-[.4px]  p-[1rem] max-w-[400px] max-h-[500px] bg-emerald-50 shadow-black shadow-sm;
+  @apply self-stretch flex flex-col items-center m-[1rem] border-black rounded-3xl border-[.4px] p-[1rem] max-w-[400px] max-h-[600px] bg-emerald-50 shadow-black shadow-sm;
 }
 
 .recipe-complet {
@@ -188,12 +197,12 @@ font-family: 'Ubuntu', sans serif;
 }
 
 .recipes {
-  @apply flex flex-col items-center mb-[3rem] md:grid md:grid-cols-2 lg:grid-cols-3 bg-cover; 
+  @apply flex flex-col sm:items-center md:items-center justify-center mb-[3rem] sm:grid md:grid md:grid-cols-2 lg:grid-cols-3; 
   
 }
 
 .recipe-complet-div {
-  @apply flex flex-col items-center mb-[3rem] bg-cover; 
+  @apply flex flex-col items-center mb-[3rem]; 
   
 }
 }
